syntax = "proto3";
package msg;
option go_package = "./proto;protoobj";

enum TypeAuth {
    TypeAuth_NULL = 0; 
    TypeAuth_telegram = 1; 
    TypeAuth_token_auth = 2;
}