syntax = "proto3";
package msg;
option go_package = "./proto;protoobj";

import "google/protobuf/wrappers.proto";

message ShortUserInfo {
    google.protobuf.UInt64Value serial_id = 1;            // Уникальный порядковый идентификатор записи
    google.protobuf.Int64Value telegram_id = 2;           // Идентификатор пользователя в Telegram
    google.protobuf.StringValue nickname = 3;             // Псевдоним или никнейм пользователя
    google.protobuf.StringValue first_name = 4;           // Имя пользователя
    google.protobuf.StringValue last_name = 5;            // Фамилия пользователя
    google.protobuf.StringValue CreatedAt = 6;            // Дата создания пользователя
}