syntax = "proto3";
package msg;
option go_package = "./proto;protoobj";

message  TokenInfo {
    string accessToken = 1;
    int64 expiresIn = 2;
}